# mlds6

./: .env  .gitignore  README.md  makefile  mlds6.env  pyproject.toml
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md  secop_summary.html
docs/deployment/: deploymentdoc.md
docs/modeling/: baseline_models.md  model_report.md
mlds6/: __init__.py
mlds6/database/: collect.py  io.py
mlds6/datamodels/: api.py  environment.py  training.py
mlds6/environment/: base.py
mlds6/evaluation/: gridEvaluation.py
mlds6/models/: feature_extraction.py  model.py
mlds6/preprocessing/: cleaning.py
mlds6/visualization/: main.py
packagename/preprocessing/: collect.py
params/api_params/: params.json
params/features_data/: featureparams.json
params/hiperparams/: model_hiperparams.json
scripts/data_acquisition/: Comprobando_modulo_collect.ipynb  EDA_KL.md  collect.py  main.py
scripts/eda/: gráficas_plotly.py  main.py
scripts/evaluation/: main.py
scripts/preprocessing/: main.py
scripts/training/: main.py
