[tool.poetry]
name = "packagename"
version = "0.1.0"
description = "Project template for data science projects"
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
