[tool.poetry]
name = "mlds6"
version = "0.1.0"
description = "Dependencias del proyecto de MLDS6_SBKFCP"
authors = ["Santiago Bello <isbelloq@unal.edu.co>, Carlos Pinto <cfpintog@gmail.com>, Kendy Fuentes <kendyluz@gmail.com>, Fabian Moreno <fabiandandres@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
ipython = "^7.30.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
